added data to recycler. added font styleing in adapter

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
 		<item name="colorAccent">@color/colorAccent</item>
 	</style>
 
+	<style name="ActionBarStyle">
+		<item name="colorAccent">@color/colorAccent</item>
+		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+		<item name="android:textColorPrimary">@color/colorAccent</item>
+		<item name="actionMenuTextColor">@color/colorAccent</item>
+		<item name="android:textColorSecondary">@color/colorAccent</item>
+		<item name="android:fontFamily">@font/abel</item>
+	</style>
+
 </resources>
