--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -15,12 +15,14 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
+		android:theme="@style/ActionBarStyle"
 
 		/>
 
 	<android.support.v7.widget.RecyclerView
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:layout_marginTop="?android:attr/actionBarSize"
 		android:id="@+id/recycler"
 		app:layout_constraintTop_toBottomOf="@id/toolbar"
 		app:layout_constraintBottom_toBottomOf="parent"
