--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,4 +6,9 @@
 	android:layout_height="match_parent"
 	tools:context=".ui.view.detail.DetailActivity">
 
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="hello fuckers!!!!!!!"/>
+
 </android.support.constraint.ConstraintLayout>
