--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,9 +6,62 @@
 	android:layout_height="match_parent"
 	tools:context=".ui.view.detail.DetailActivity">
 
-	<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="hello fuckers!!!!!!!"/>
+
+	<android.support.v7.widget.Toolbar
+		android:id="@+id/toolbar"
+		android:layout_width="match_parent"
+		android:layout_height="?android:attr/actionBarSize"
+		android:background="@color/colorPrimary"
+		android:padding="5dp"
+		android:theme="@style/ActionBarStyle"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintStart_toStartOf="parent">
+
+
+		<RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent">
+
+			<TextView
+				android:id="@+id/urlText"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_centerVertical="true"
+				android:layout_margin="8dp"
+				android:ellipsize="end"
+				android:fontFamily="@font/abel"
+				android:maxLength="50"
+				android:maxLines="1"
+				android:textColor="@color/colorAccent"
+				android:textSize="18dp"
+				tools:text="https://www.google.com" />
+
+
+			<ImageButton
+				android:id="@+id/closeButton"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentRight="true"
+				android:layout_centerVertical="true"
+				android:background="@null"
+				android:scaleType="fitCenter"
+				android:src="@drawable/close_button_background"
+				android:text="Close" />
+
+
+		</RelativeLayout>
+
+
+	</android.support.v7.widget.Toolbar>
+
+	<WebView
+		android:id="@+id/webview"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_marginTop="?android:attr/actionBarSize"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
 </android.support.constraint.ConstraintLayout>
