--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
 		<item name="android:fontFamily">@font/abel</item>
 	</style>
 
+	<style name="ProgressTheme" >
+		<item name="colorAccent">@color/colorPrimary</item>
+	</style>
+
 </resources>
