--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -12,26 +12,36 @@
 		android:layout_width="match_parent"
 		android:layout_height="?android:attr/actionBarSize"
 		android:background="@color/colorPrimary"
+		android:theme="@style/ActionBarStyle"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
-		android:theme="@style/ActionBarStyle"
 
 		/>
 
-	<android.support.v7.widget.RecyclerView
+
+	<FrameLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:layout_marginTop="?android:attr/actionBarSize"
-		android:id="@+id/recycler"
-		app:layout_constraintTop_toBottomOf="@id/toolbar"
-		app:layout_constraintBottom_toBottomOf="parent"
 		>
 
+		<android.support.v7.widget.RecyclerView
+			android:id="@+id/recycler"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
 
-	</android.support.v7.widget.RecyclerView>
+		<imageviewer.eoinahern.ie.imageviewer.tools.views.LoadingView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:id="@+id/loading"
+			android:layout_gravity="center"/>
 
+
+	</FrameLayout>
 
 
 </android.support.constraint.ConstraintLayout>
