--- a/app/src/main/res/drawable/close_button_background.xml
+++ b/app/src/main/res/drawable/close_button_background.xml
@@ -6,7 +6,7 @@
 		<shape
 			android:padding="15dp"
 			android:shape="oval">
-			<solid android:color="@color/dark_grey" />
+			<solid android:color="@color/colorPrimary" />
 			<stroke
 				android:width="1dp"
 				android:color="@color/colorAccent" />
