--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -55,13 +55,30 @@
 
 	</android.support.v7.widget.Toolbar>
 
-	<WebView
-		android:id="@+id/webview"
+	<FrameLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_marginTop="?android:attr/actionBarSize"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/toolbar" />
+		android:animateLayoutChanges="true">
+
+		<WebView
+			android:id="@+id/webview"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_marginTop="?android:attr/actionBarSize"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/toolbar"
+			android:visibility="gone"/>
+
+
+		<imageviewer.eoinahern.ie.imageviewer.tools.views.LoadingView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:id="@+id/loading"
+			android:layout_gravity="center">
+
+		</imageviewer.eoinahern.ie.imageviewer.tools.views.LoadingView>
+
+	</FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
