--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,80 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:padding="24dp"
 	tools:context=".ui.view.login.LoginActivity">
+
+
+	<ImageView
+		android:id="@+id/icon"
+		android:layout_width="90dp"
+		android:layout_height="90dp"
+		android:layout_marginTop="8dp"
+		android:background="@drawable/fc2_logo2"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
+
+
+	<EditText
+		android:id="@+id/emailTxt"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="50dp"
+		android:hint="@string/email_hint"
+		android:maxLines="1"
+		android:theme="@style/EditTextStyle"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/icon" />
+
+	<EditText
+		android:id="@+id/passwordTxt"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="16dp"
+		android:hint="@string/password_hint"
+		android:inputType="textPassword"
+		android:maxLines="1"
+		android:theme="@style/EditTextStyle"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/emailTxt" />
+
+	<FrameLayout
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="24dp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/passwordTxt">
+
+		<imageviewer.eoinahern.ie.imageviewer.tools.views.LoadingView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:visibility="invisible"
+			android:id="@+id/loading"
+			/>
+
+
+	</FrameLayout>
+
+
+	<Button
+		android:id="@+id/nextBtn"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_margin="14dp"
+		android:layout_marginBottom="8dp"
+		android:background="@drawable/button_background_blue"
+		android:text="@string/login_txt"
+		android:fontFamily="@font/abel"
+		android:textColor="@color/colorAccent"
+		android:textSize="18dp"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		 />
+
 
 </android.support.constraint.ConstraintLayout>
