--- a/app/src/main/res/layout/loading_view_layout.xml
+++ b/app/src/main/res/layout/loading_view_layout.xml
@@ -30,12 +30,13 @@
 			<TextView
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:id="@+id/loading_message"
 				android:layout_gravity="center_horizontal"
 				android:layout_marginTop="8dp"
 				android:fontFamily="@font/abel"
 				android:text="@string/loading"
 				android:textColor="@color/dark_grey"
-				android:textSize="18dp"
+				android:textSize="16dp"
 				tools:text="loading..." />
 
 
