--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
 	<color name="dark_grey">#696969</color>
 	<color name="light_grey">#D3D3D3</color>
 	<color name="colorAccent">#FFFFFF</color>
+	<color name="warning_red">#FF0800</color>
 </resources>
