--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,8 +17,17 @@
 		<item name="android:fontFamily">@font/abel</item>
 	</style>
 
-	<style name="ProgressTheme" >
+	<style name="ProgressTheme">
 		<item name="colorAccent">@color/colorPrimary</item>
+	</style>
+
+
+	<style name="EditTextStyle" parent="Theme.AppCompat.Light">
+		<item name="colorAccent">@color/dark_grey</item>
+		<item name="android:textSize">18dp</item>
+		<item name="android:colorControlNormal">@color/light_grey</item>
+		<item name="android:colorControlHighlight">@color/dark_grey</item>
+		<item name="android:fontFamily">@font/abel</item>
 	</style>
 
 </resources>
