--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,17 +19,30 @@
 		app:layout_constraintTop_toTopOf="parent" />
 
 
-	<EditText
-		android:id="@+id/emailTxt"
+	<android.support.design.widget.TextInputLayout
+		android:id="@+id/emailInputLayout"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="50dp"
-		android:hint="@string/email_hint"
-		android:maxLines="1"
-		android:theme="@style/EditTextStyle"
+		android:layout_marginTop="32dp"
+		android:theme="@style/MyTextInputLayoutTheme"
+		app:errorEnabled="true"
+		app:errorTextAppearance="@style/ErrorTextInputFontStyle"
+		app:hintEnabled="false"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/icon" />
+		app:layout_constraintTop_toBottomOf="@id/icon">
+
+		<EditText
+			android:id="@+id/emailTxt"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="50dp"
+			android:hint="@string/email_hint"
+			android:inputType="text"
+			android:maxLines="1"
+			android:theme="@style/EditTextStyle" />
+
+	</android.support.design.widget.TextInputLayout>
 
 	<EditText
 		android:id="@+id/passwordTxt"
@@ -42,7 +55,7 @@
 		android:theme="@style/EditTextStyle"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/emailTxt" />
+		app:layout_constraintTop_toBottomOf="@+id/emailInputLayout" />
 
 	<FrameLayout
 		android:layout_width="wrap_content"
@@ -53,11 +66,10 @@
 		app:layout_constraintTop_toBottomOf="@id/passwordTxt">
 
 		<imageviewer.eoinahern.ie.imageviewer.tools.views.LoadingView
+			android:id="@+id/loading"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:visibility="invisible"
-			android:id="@+id/loading"
-			/>
+			android:visibility="invisible" />
 
 
 	</FrameLayout>
@@ -70,14 +82,13 @@
 		android:layout_margin="14dp"
 		android:layout_marginBottom="8dp"
 		android:background="@drawable/button_background_blue"
-		android:text="@string/login_txt"
 		android:fontFamily="@font/abel"
+		android:text="@string/login_txt"
 		android:textColor="@color/colorAccent"
 		android:textSize="18dp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		 />
+		app:layout_constraintStart_toStartOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
